@@ -1,3 +1,14 @@
+2017-10-02  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK][WPE] Enable interactive forms validation by default
+        https://bugs.webkit.org/show_bug.cgi?id=177737
+
+        Reviewed by Michael Catanzaro.
+
+        It's currently disabled for no reason.
+
+        * Shared/WebPreferencesDefinitions.h:
+
 2017-09-30  Darin Adler  <darin@apple.com>
 
         Have IPC::Connection::Client objects consistently invalidate the connection when destroyed
